--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
   },
   "devDependencies": {
     "@types/react-dom": "^18.2.7",
+    "@typescript-eslint/eslint-plugin": "^6.6.0",
+    "@typescript-eslint/parser": "^6.6.0",
     "@vitejs/plugin-react": "3.0",
+    "eslint": "^8.48.0",
+    "eslint-plugin-react": "^7.33.2",
     "typescript": "^5.1.6",
     "vite": "^4.0.4"
   },
