--- a/package.json
+++ b/package.json
@@ -24,7 +24,10 @@
     "leva": "^0.9.35",
     "r3f-perf": "^7.1.2",
     "react": "18.2",
+    "react-device-detect": "^2.2.3",
     "react-dom": "18.2",
+    "react-joystick-component": "^6.2.1",
+    "styled-components": "^6.0.8",
     "three": "^0.153.0"
   }
 }
