--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@react-three/drei": "^9.77.4",
     "@react-three/fiber": "^8.13.3",
+    "@react-three/postprocessing": "^2.15.8",
     "@react-three/rapier": "^1.1.1",
     "leva": "^0.9.35",
     "r3f-perf": "^7.1.2",
