--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "vite": "^4.0.4"
   },
   "dependencies": {
+    "@react-three/csg": "^3.1.0",
     "@react-three/drei": "^9.88.13",
     "@react-three/fiber": "^8.13.3",
     "@react-three/postprocessing": "^2.15.8",
