--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build"
+    "build": "vite build",
+    "deploy": "vercel --prod"
   },
   "devDependencies": {
     "@types/react-dom": "^18.2.7",
@@ -30,6 +31,7 @@
     "react-dom": "18.2",
     "react-joystick-component": "^6.2.1",
     "styled-components": "^6.0.8",
-    "three": "^0.153.0"
+    "three": "^0.153.0",
+    "vercel": "^33.5.0"
   }
 }
