--- a/package.json
+++ b/package.json
@@ -18,17 +18,20 @@
     "vite": "^4.0.4"
   },
   "dependencies": {
+    "@gsap/react": "^2.1.0",
     "@react-three/csg": "^3.1.0",
     "@react-three/drei": "^9.88.13",
     "@react-three/fiber": "^8.13.3",
     "@react-three/postprocessing": "^2.15.8",
     "@react-three/rapier": "^1.1.1",
+    "gsap": "^3.12.5",
     "leva": "^0.9.35",
     "r3f-perf": "^7.1.2",
     "react": "18.2",
     "react-device-detect": "^2.2.3",
     "react-dom": "18.2",
     "react-joystick-component": "^6.2.1",
+    "react-router-dom": "^6.22.3",
     "styled-components": "^6.0.8",
     "three": "^0.153.0"
   }
