--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "devDependencies": {
     "@types/react-dom": "^18.2.7",
+    "@types/three": "^0.167.2",
     "@typescript-eslint/eslint-plugin": "^6.6.0",
     "@typescript-eslint/parser": "^6.6.0",
     "@vitejs/plugin-react": "3.0",
@@ -24,6 +25,8 @@
     "@react-three/fiber": "^8.13.3",
     "@react-three/postprocessing": "^2.15.8",
     "@react-three/rapier": "^1.1.1",
+    "glsl-noise": "^0.0.0",
+    "glslify": "^7.1.1",
     "gsap": "^3.12.5",
     "leva": "^0.9.35",
     "r3f-perf": "^7.1.2",
@@ -34,5 +37,10 @@
     "react-router-dom": "^6.22.3",
     "styled-components": "^6.0.8",
     "three": "^0.153.0"
+  },
+  "browserify": {
+    "transform": [
+      "glslify"
+    ]
   }
 }
