--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build"
+    "build": "vite build",
+    "start": "yarn dev"
   },
   "devDependencies": {
     "@types/react-dom": "^18.2.7",
